--- a/mhbridge/pom.xml
+++ b/mhbridge/pom.xml
@@ -38,4 +38,16 @@
             <url>http://repo.reficio.org/maven/</url>
         </repository>
     </repositories>
+    <build>
+      <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+       </build>
 </project>
