change message handling, add busy indicator

--- a/mhbridge/src/main/resources/mhbridge.properties
+++ b/mhbridge/src/main/resources/mhbridge.properties
@@ -3,3 +3,4 @@ misterHouseSoapEndpoint = http://10.0.1.6:8080/bin/soapcgi.pl
 
 # this is the UDP port on which we listen for OSC messages
 oscPort = 8000
+oscReplyPort = 9000
