added new controls to osc layout.  mhbridge now loads syncable controls list from properties instead of being hard coded.

--- a/mhbridge/src/main/resources/mhbridge.properties
+++ b/mhbridge/src/main/resources/mhbridge.properties
@@ -4,3 +4,11 @@ misterHouseSoapEndpoint = http://10.0.1.6:8080/bin/soapcgi.pl
 # this is the UDP port on which we listen for OSC messages
 oscPort = 8000
 oscReplyPort = 9000
+
+syncdevice.1=bedside_r
+syncdevice.2=kitchen_ceiling
+syncdevice.3=front_dr_ceiling
+syncdevice.4=kitchen_fan
+syncdevice.5=hall_ceiling
+syncdevice.6=dining_rm_ceiling
+syncdevice.7=living_rm_lamp
