--- a/mhbridge/pom.xml
+++ b/mhbridge/pom.xml
@@ -4,7 +4,6 @@
 
 	<groupId>org.capybara</groupId>
 	<artifactId>mhbridge</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>mhbridge</name>
@@ -59,4 +58,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>1.0.1</version>
 </project>
